main.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:800,500');
@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
@import url('https://fonts.googleapis.com/css?family=Passion+One:700');

body {
  margin: 0;
  padding: 0;
  background: url( 'res/footer_lodyas.png' ) fixed;
}

* {
  box-sizing: border-box;
  line-height: 1.5;
}

#landing {
  display: flex;
}

nav {
  background-color: rgba( 263, 240, 241, 0.7 );
  font-family: 'Open Sans', sans-serif;
  min-width: 15%;
  height: 100%;
  padding: 0;
  position: fixed;
  box-sizing: border-box;
}

.col {
  display: flex;
  flex-direction: column;
}



nav #head-nav-container {
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: #2980b9;
  flex-direction: column;
  align-items: center;
}

nav #head-nav-container span {
  width: 3.5em;
  height: 3.5em;
  display: flex;
  justify-content: center;
  margin-top: 1em;
  margin-bottom: 0.5;
}

nav #head-nav-container h2 {
  margin: 0;
  margin-bottom: 0.5em;
  font-family: 'Passion One', cursive;
  color: #ecf0f1;
  font-size: 1.5em;
  letter-spacing: 1px;
}

nav #head-nav-container span img {
  max-width: 100%;
  max-height: 100%;
}

nav h3:nth-child(1) {
  color: #2980b9;
}

nav h3:nth-child(4) {
  margin-bottom: 2em;
}

nav h3 {
  text-align: left;
  font-size: 1.3em;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 2em;
  margin-right: 2em;
  cursor: pointer;
}
nav h3:nth-child(1) {
  margin-top: 4em;
}
nav h3:nth-child(4) {
  margin-bottom: 4em;
}

nav #social-row {
  padding-top: 1em;
  padding-bottom: 1em;
  display: flex;
  background-color: rgba( 263, 240, 241, 0.6 );
  width: 100%;
  bottom: 0;
  position: absolute;
}

nav #social-row .social-item {
  flex-grow: 1;
  display: flex;
  justify-content: center;
}

nav #social-row .social-item img {
  margin: 0;
  padding: 0;
  max-width: 100%;
  max-height: 100%;
  width: 2.5em;
  height: 2.5em;
}

#landing-rest {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: url( 'res/footer_lodyas.png' ) fixed;
}

#landing-rest #main {
  display: inline-flex;
  flex-direction: column;
  color: #ecf0f1;
  width: 85%;
  max-width: 1200px;
  /*margin-left: -10px;*/
  /*margin-left: -5%;*/

}

#landing-rest #main h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 2em;
  margin: 0;
  padding: 0;
  margin-top: 1.5em;

}

#landing-rest #main h3 {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  padding: 0;
  color: #2980b9;
  font-size: 1.8em;
}

.section-header {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
  font-size: 2.3em !important;
  color: #2980b9;
  text-align: left !important;
  width: 85%;
}

#landing-rest #main p {
  margin: 0;
  padding: 0;
  margin-top: 2%;
  font-size: 1.5em;
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
  font-family: 'Roboto Condensed', sans-serif;
  margin-bottom: 6%;
}

#landing-rest #landing-info {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.landing-item::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.0);
  z-index: -1;
}
#landing-rest #landing-info .landing-item {
  position: relative;
  font-family: 'Open Sans', sans-serif;
  margin-bottom: 3%;
  color: #ecf0f1;
  color: black;
  z-index: 5000;
  box-shadow: 0px 3px 15px black;
  cursor: pointer;
  display: flex;
  flex-direction: column;
}

.row {
  display: flex;
}

#aarininc {
  /*background: url( "https://static.pexels.com/photos/4097/city-cars-traffic-lights.jpeg" ) center center;*/
  background-color: rgba(255,255,255,.3);
  margin-top: 1%;
}

#smartparts {
  /*background: url( "https://static.pexels.com/photos/245618/pexels-photo-245618.jpeg" ) center center;*/
  background-color: rgba(255,255,255,.3);
}

#akfitness {
  /*background: url("https://static.pexels.com/photos/38050/pexels-photo-38050.jpeg") center center;*/
  background-color: rgba(255,255,255,.3);
}

#allbuthome {
  /*background: url("https://static.pexels.com/photos/28221/pexels-photo-28221.jpg") no-repeat center center;*/
  background-color: rgba(255,255,255,.3);
}


.landing-item .landing-item-photos {
  justify-content: center;
  align-items: center;
  display: flex;
  margin-bottom: 5%;
}

.landing-item h2 {
  text-align: center;
  /* Make accent color */
  color: #ecf0f1;
}

#landing-rest #landing-info .landing-item:nth-child(1) {

}

#landing-rest #landing-info .landing-item .top {
  /*background-color: rgba(41,128,185,0.3);*/
  margin-top: 5%;
  margin-bottom: 5%;

}
#landing-rest #landing-info .landing-item h4 {
  padding: 0;
  margin: 0;
  font-size: 1.5em;
  text-align: center;
}
#landing-rest #landing-info .landing-item img {
  max-width: 40%;
  margin: 0;
  height: auto;
  margin: 0.5em;
}
#landing-rest #landing-info .landing-item p {
  font-size: 1.2em;
  width: 100%;
  margin: 0;
  padding-left: 4%;
  padding-right: 4%;
  text-align: left;
  font-family: 'Roboto Condensed', sans-serif;
}

#landing-rest #landing-info .landing-item ul {
  margin-left: 5%;
  margin-right: 5%;
  font-size: 1.2em;
  font-family: 'Roboto Condensed', sans-serif;
}

#interests {
  width: 85%;
  max-width: 1200px;
  margin-top: 6%;
  margin-bottom: 6%;
  /*margin-left: -5%;*/
  display: flex;
  flex-direction: column;
}

#interests h3 {
}

#interests p {
  color: #ecf0f1;
  font-family: 'Roboto Condensed', sans-serif;
  margin: 0;
  margin-bottom: 3%;
  font-size: 1.2em;
}

#interests #skills-container {
  display: flex;
  flex-wrap: wrap;
}
#interests #skills-container .skill {
  flex-grow: 1;
  flex-basis: 300px;
  background-color: rgba(41,128,185,0.7);
  font-family: 'Open Sans', sans-serif;
  margin: 1%;
  margin-top: 0;
  color: #ecf0f1;
  color: black;
  box-shadow: 0px 3px 15px black;
  cursor: pointer;
  display: flex;
  flex-direction: column;
}
#interests #skills-container .skill:nth-child(1) {

}
#interests #skills-container .skill:nth-child(3) {

}

#interests #skills-container .skill h4 {
  text-align: center;
  color: #ecf0f1;
  margin-bottom: 0.5em;
}

#interests #skills-container .skill p {
  padding-left: 1em;
  padding-right: 1em;
  font-family: 'Roboto Condensed', sans-serif;
  color: #ecf0f1;
}

#contact {
  width: 85%;
  max-width: 1200px;
  /*margin-left: -5%;*/
  margin-bottom: 6%;
}

